@@ -3,6 +3,8 @@ CHANGES-1.4.txt
 
 CHANGES IN CUPS V1.4.2
 
+	- The cupstestppd program incorrectly reported filters with bad
+	  permisssions as missing (STR #3363)
 	- The Russian web interface templates had errors (STR #3359)
 	- The cups.desktop file used the wrong locale names (STR #3358)
 	- cupsSideChannelRead() did not return an error for short reads.
